--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.13.2",
     "date-fns": "^3.6.0",
+    "emoji-picker-react": "^4.11.1",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
